--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "json:server": "json-server --watch db.json",
-    "json:server-routes": "json-server --watch db.json --routes routes.json"
+    "json:server:routes": "json-server --watch db.json --routes routes.json"
   },
   "private": true,
   "dependencies": {
@@ -24,7 +24,7 @@
     "json-server": "^0.17.1",
     "material-icons": "^1.12.0",
     "materialize-css": "^1.0.0",
-    "rxjs": "~7.5.0",
+    "rxjs": "^6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
