--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --base-href=/lista-de-compras/",
+    "ghpages": "angular-cli-ghpages --dir=dist/lista-de-compras",
+    "deploy": "npm run build & npm run ghpages",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "json:server": "json-server --watch db.json",
@@ -21,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@types/materialize-css": "^1.0.11",
+    "angular-cli-ghpages": "^1.0.5",
     "json-server": "^0.17.1",
     "material-icons": "^1.12.0",
     "materialize-css": "^1.0.0",
